[tool.poetry]
name = "streamlit-coleta"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
