[tool.poetry]
name = "streamlit-coleta"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
